<resources>
    <string name="app_name">CriminalIntent_Ranises</string>
    <string name="crime_title_hint">Enter crime title</string>
    <string name="crime_solved_label">Solved</string>
    <string name="save">Save Crime</string>
    <string name="contact_police">Contact Police</string>
    <string name="contact_police_toast">Police contact requested</string>
    <string name="jump_first">First</string>
    <string name="jump_last">Last</string>
    <string name="ok">OK</string>
    <string name="select_time">Select Time</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="case_open">Crime Open</string>
    <string name="case_closed">Crime Closed</string>
    <string name="case_details">Crime Details</string>
    <string name="case_browser">Crime Browser</string>
    <string name="crime_datails">Crime Datails</string>
    <string name="save_case_title">Save Crime</string>
    <string name="save_case_confirm_message">Are you sure you want to save this crime?</string>
    <string name="change_date_or_time">Change Date or Time</string>
    <string name="change_date">Change Date</string>
    <string name="change_time">Change Time</string>
    <string name="delete_crime_message">Are you sure you want to delete this crime?</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="report_crime_title">Report Crime</string>
    <string name="report_crime_confirm_message">Are you sure you want to report this crime?</string>
    <string name="case_position">%1$d of %2$d</string>
    <string name="case_number_title">Crime #%1$d</string>
    <string name="crime_title_fallback">Untitled crime</string>
    <string name="add_new_crime">Add new crime</string>
    <string name="empty_crimes_title">There are no crimes</string>
    <string name="empty_crimes_action">Create your first crime</string>
    <string name="case_status_label">Status</string>
    <string name="last_updated_label">Last Updated</string>
    <string name="send_report">Send Report</string>
    <string name="choose_suspect">Choose Suspect</string>
    <string name="call_suspect">Call Suspect</string>
        <string name="suspect_options_title">Suspect Options</string>
    <string name="change_suspect">Change Suspect</string>
    <string name="delete_suspect">Delete Suspect</string>
    <string name="suspect_button_text">Suspect: %1$s</string>
    <string name="crime_report_subject">Crime Report</string>
    <string name="crime_report">%1$s\nDate: %2$s\nStatus: %3$s\nSuspect: %4$s</string>
    <string name="crime_report_solved">Solved</string>
    <string name="crime_report_unsolved">Unsolved</string>
    <string name="crime_report_no_suspect">No suspect</string>
    <string name="crime_report_chooser">Share crime report via</string>
    <string name="no_contacts_app">No contacts app available</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
<<<<<<< HEAD
=======
    <string name="menu_spanish">Switch to Spanish</string>
    <string name="menu_english">Switch to English</string>
>>>>>>> c126cc4 (Finish the Chapter 16, 17 and 18)
    <string name="select_suspect">Contacts</string>
    <string name="contact_dialog_title">Select a Contact</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_contact">Add Contact</string>
<<<<<<< HEAD
=======
    <string name="crime_take_photo">Take Photo</string>
    <string name="crime_choose_photo">Choose from Gallery</string>
    <string name="crime_photo_source">Add Crime Photo</string>
    <string name="crime_photo_label">Crime Scene Photo</string>
    <string name="crime_photo_thumbnail">Crime scene thumbnail</string>
    <string name="crime_photo_fullscreen">Crime scene full photo</string>
    <string name="photo_not_available">Photo not available yet</string>
    <string name="name_required">Name required</string>
    <string name="no_phone_number">No phone number</string>
    <string name="max_crimes_limit">Maximum limit of %1$d crimes reached</string>
    <string name="language_changed_to_spanish">Language changed to Spanish</string>
    <string name="language_changed_to_english">Language changed to English</string>
    <string name="welcome_title">Welcome to CriminalIntent</string>
    <string name="welcome_message">Select a crime from the list to view details, or create a new crime to get started.</string>
    <string name="welcome_instruction">Choose a crime from the left panel to see its details here.</string>
>>>>>>> c126cc4 (Finish the Chapter 16, 17 and 18)

    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime - %2$d open - %3$d solved</item>
        <item quantity="other">%1$d crimes - %2$d open - %3$d solved</item>
    </plurals>
</resources>
